@@ -1,7 +1,14 @@
 2011-10-07 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/z80/gen.c,
+	  src/z80/peeph-r2k.def,
+	  src/z80/peeph-z80.def:
+	  Allow use of r2k-specific ld hl, (hl) instruction.
+
+2011-10-07 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/z80/gen.c:
-	  Make better use of the r2k-specific add sp,d instruction.
+	  Make better use of the r2k-specific add sp, d instruction.
 
 2011-10-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
